# market_place

./: .editorconfig  .flake8  .github-setup.md  .gitignore  .mypy.ini  15.1_main.py  16.1_main.py  COVERAGE.md  Makefile  README.md  activate.sh  coverage.json  main.py  pyproject.toml  requirements.txt  ПЛАН-ПРОЕКТА.md
docs/: CONFIG.md  PLAN_INHERITANCE.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_data_loader_py.html  z_145eef247bfb46b6_product_py.html
src/: category.py  data_loader.py  product.py
tests/: conftest.py  test_category.py  test_data_loader.py  test_product.py
