[tool.poetry]
name = "market-place"
version = "0.1.0"
description = "Проект для управления товарами и категориями в интернет-магазине"
authors = ["webmiko <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | __pycache__
  | build
  | dist
  | \\.venv
  | venv
  | \\.mypy_cache
  | \\.pytest_cache
)
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
known_first_party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = [
    "^\\.venv/",
    "^venv/",
    "^build/",
    "^dist/",
    "^\\.mypy_cache/",
    "^\\.pytest_cache/",
]

# Настройки для pytest (библиотека тестирования не требует типов)
[[tool.mypy.overrides]]
module = [
    "pytest",
    "pytest.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

